--- a/css/all.css
+++ b/css/all.css
@@ -218,7 +218,7 @@ a{
     border-radius: 5px;
     padding-left: 30px;
     appearance: none;
-    background-image: url(images/Icon/arrow-down16.png);
+    background-image: url(images/icon/arrow-down16.png);
     background-position: 300px ;
     background-size: 16px 16px;
     background-repeat: no-repeat, repeat; 
@@ -235,14 +235,14 @@ a{
     color: #9E9E9E;
 }
 .search{
-    background-image: url(images/Btn/horizon-style1.png);
+    background-image: url(images/btn/horizon-style1.png);
     width: 350px;
     height: 50px;
     border: none;
     border-radius: 5px;
 }
 .search:hover{
-    background-image: url(images/Btn/horizon-style1_hover.png);
+    background-image: url(images/btn/horizon-style1_hover.png);
 }
 @media (max-width:768px) { 
     .container{
@@ -347,16 +347,16 @@ a{
     display: flex;
 }
 .event-1{
-    background-image: url(images/Images/event-1.jpeg);
+    background-image: url(images/photo/event-1.jpeg);
 }
 .event-2{
-    background-image: url(images/Images/event-2.jpeg);
+    background-image: url(images/photo/event-2.jpeg);
 }
 .event-3{
-    background-image: url(images/Images/event-3.jpeg);
+    background-image: url(images/photo/event-3.jpeg);
 }
 .event-4{
-    background-image: url(images/Images/event-4.jpeg);
+    background-image: url(images/photo/event-4.jpeg);
 }
 .event-pic{
     width: 160px;
@@ -382,6 +382,7 @@ a{
     line-height: 1.4;
 }
 .event-detail{
+    max-width: 100%;
     display: flex;
     justify-content: space-between;
     padding-right: 21px;
@@ -407,16 +408,16 @@ a{
     max-width: 255px;
 }
 .spot-1{
-    background-image: url(images/Images/spot-1.jpeg);
+    background-image: url(images/photo/spot-1.jpeg);
 }
 .spot-2{
-    background-image: url(images/Images/spot-2.jpeg);
+    background-image: url(images/photo/spot-2.jpeg);
 }
 .spot-3{
-    background-image: url(images/Images/spot-3.jpeg);
+    background-image: url(images/photo/spot-3.jpeg);
 }
 .spot-4{
-    background-image: url(images/Images/spot-4.jpeg);
+    background-image: url(images/[photo]/spot-4.jpeg);
 }
 .spot-pic{
     width: 255px;
@@ -425,7 +426,7 @@ a{
     background-position: center;
     border-radius: 20px;
     overflow: hidden;
-    background-image: url(images/Images/Rectangle\ 85.png);/*預設圖*/
+    background-image: url(images/photo/Rectangle\ 85.png);/*預設圖*/
 }
 .spot-name{
     font-size: 22px;
@@ -445,16 +446,16 @@ a{
 /*----------------------------part5 Good food--------------------------*/
 /*基本規格與hotspot相同，僅置換圖片*/
 .food-1{
-    background-image: url(images/Images/food-1.jpg);
+    background-image: url(images/photo/food-1.jpg);
 }
 .food-2{
-    background-image: url(images/Images/food-2.jpg);
+    background-image: url(images/photo/food-2.jpg);
 }
 .food-3{
-    background-image: url(images/Images/food-3.jpg);
+    background-image: url(images/photo/food-3.jpg);
 }
 .food-4{
-    background-image: url(images/Images/food-4.jpg);
+    background-image: url(images/photo/food-4.jpg);
 }
 /*----------------------------part6 Footer--------------------------*/
 .footer-w{
