--- a/css/nav-page.css
+++ b/css/nav-page.css
@@ -13,7 +13,7 @@
     padding-left: 30px;
 }
 .page-search{
-    background-image: url(images/btn/horizon-style1.png);
+    background-image: url(https://raw.githubusercontent.com/maggie19921001/travel-taiwan/9c2e592f364f12b1ed54e54ce984f8c3dc1268cd/css/images/Btn/horizon-style1.svg);
     width: 210px;
     height: 50px;
     border: none;
@@ -22,8 +22,33 @@
     background-position: center;
 }
 .page-search:hover{
-    background-image: url(images/btn/horizon-style1_hover.png);
+    background-image: url(https://raw.githubusercontent.com/maggie19921001/travel-taiwan/9c2e592f364f12b1ed54e54ce984f8c3dc1268cd/css/images/Btn/horizon-style1_hover.svg);
 }
+@media (max-width:768px) {
+    .page-search-box{
+        flex-direction: column;
+        padding-top: 20px;
+        padding-left: 0px;
+        gap: 15px;
+        width: 100%;
+    }    
+    .page-type-box{
+        width: 100%;
+        height: 50px;
+        border: solid 1px #E6E6E6;
+        border-radius: 5px;
+        background-color: #F9F9F9;
+        padding-left: 30px;
+    }
+    .choose{
+        width: 100%;
+        background-position: 40rem;
+    }
+    .page-search{
+        width: 100%;
+    }
+}
+
 /*----------------------------Category--------------------------*/
 .section-main{
     display: flex;
@@ -57,4 +82,12 @@
 }
 .theme1-7{
     background-image: url(images/photo/Theme-bg1-7.png);
+}
+@media (max-width:768px) {
+    .container{
+        margin: 0 auto;
+    }
+    .section-main{
+       justify-content: center;
+    }
 }
