--- a/css/detail.css
+++ b/css/detail.css
@@ -5,7 +5,6 @@
     width: 1100px;
     height: 400px;
     border-radius: 24px;
-
     object-fit: cover;
 }
 .title{
@@ -46,12 +45,8 @@
 }
 .other-info{
     max-width: 50%;
-    
 }
-/* .map{
-    border-radius: 12px;
-    margin-bottom: 32px;
-} */
+
 .nearby-title{
     margin-bottom: 20px;
 }
@@ -88,4 +83,28 @@
     height: 250px;
     border-radius: 12px;
     margin-bottom: 32px;
+  }
+
+  @media (max-width:768px) {
+    .index{
+        line-height: 1.3;
+    }
+    .main-photo{
+        border-radius: 12px;
+    }
+    .info-block{
+        line-height: 1.5;
+        flex-direction: column;
+    }
+    .other-info{
+        max-width: 100%;
+    }
+    .nearby{
+        flex-direction: column;
+        gap: 10px;
+    }
+    .near-frame{
+        width: 100%;
+    }
+
   }
