--- a/css/detail.css
+++ b/css/detail.css
@@ -70,6 +70,9 @@
 .spot-frame{
     display: flex;
     gap: 30px;
+    overflow-x: auto;
+    overflow-y: hidden;
+    height: 310px;
 }
 
 /*----------------------------MAP--------------------------*/
